methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:8: error: not found: value baisseBrosee
  baisseBrosee()
  ^