methods.picture.PictureMono1.scala.code

def faireV(){
  baisseBrosse()
  gauche()
  leveBrosse()
  avance()
  droite()
  baisseBrosee()
  avance()
  leveBrosse()
  droite()
  avance()
  gauche()
  avance()
}

override def run() {
  avance(3)
  faireV()
  
}